Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82405

MSVC2019: Any test with a _data function will crash when adding test-data

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • None
    • 6.0
    • Core: Object Model
    • None
    • Windows
    • 5e908ada6759b27cd50cf860b8028f8bd0d6c94c (qt/qtbase/dev)

    Description

      After building with dev today (and suppressing the warning from QTBUG-82403 (this bug is maybe related)) upon running a test which executes a *_data() function it will crash when attempting to add test-data.

      An example of a stack-trace is found below.

      #  1: qt::QTest::FatalSignalHandler::windowsFaultHandler() - 0x00007FFA26C4AFE0
      #  2: UnhandledExceptionFilter() - 0x00007FFA46E9F4B0
      #  3: memset() - 0x00007FFA49043000
      #  4: _C_specific_handler() - 0x00007FFA4902C640
      #  5: _chkstk() - 0x00007FFA49041100
      #  6: RtlRaiseException() - 0x00007FFA49009EF0
      #  7: KiUserExceptionDispatcher() - 0x00007FFA4903FE60
      #  8: qt::QArrayData::isStatic() - 0x00007FF9FC121BA0
      #  9: qt::QArrayData::ref() - 0x00007FF9FC123070
      # 10: qt::QArrayDataPointer<enum qt::Qt::DayOfWeek>::QArrayDataPointer<enum qt::Qt::DayOfWeek>() - 0x00007FF9FC2FA490
      # 11: qt::QVector<enum qt::Qt::DayOfWeek>::QVector<enum qt::Qt::DayOfWeek>() - 0x00007FF9FC2FAC50
      # 12: <lambda_05066fd4139b90035d8dc11e2c0c4c13>::operator()() - 0x00007FF9FC2FCD00
      # 13: <lambda_05066fd4139b90035d8dc11e2c0c4c13>::<lambda_invoker_cdecl>() - 0x00007FF9FC2F5CA0
      # 14: qt::QMetaType::construct() - 0x00007FF9FC5C31B0
      # 15: qt::QMetaType::create() - 0x00007FF9FC5C3080
      # 16: qt::QMetaType::create() - 0x00007FF9FC5C29F0
      # 17: qt::QTestData::append() - 0x00007FFA26C541A0
      # 18: qt::operator<<<bool>() - 0x00007FF6CD647D70
      # 19: tst_QDir::mkdirRmdir_data() - 0x00007FF6CD6211A0
      # 20: tst_QDir::qt_static_metacall() - 0x00007FF6CD6150C0
      # 21: qt::QMetaMethod::invoke() - 0x00007FF9FC5B3970
      # 22: qt::QMetaMethod::invoke() - 0x00007FF9FC1482D0
      # 23: qt::QTest::invokeMethod() - 0x00007FFA26C343B0
      # 24: qt::QTest::TestMethods::invokeTest() - 0x00007FFA26C30BE0
      # 25: qt::QTest::TestMethods::invokeTests() - 0x00007FFA26C2E2B0
      # 26: qt::QTest::qRun() - 0x00007FFA26C29AC0
      # 27: qt::QTest::qExec() - 0x00007FFA26C29F60
      # 28: main() - 0x00007FF6CD63D2C0
      # 29: invoke_main() - 0x00007FF6CD65EA50
      # 30: __scrt_common_main_seh() - 0x00007FF6CD65E840
      # 31: __scrt_common_main() - 0x00007FF6CD65E820
      # 32: mainCRTStartup() - 0x00007FF6CD65EB10
      # 33: BaseThreadInitThunk() - 0x00007FFA474D7BC0
      # 34: RtlUserThreadStart() - 0x00007FFA4900CEB0
      

      The data function attempts to insert a bool into the data-row but the copy-constructor of QVector<Qt::DayOfWeek> is invoked.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            manordheim MÃ¥rten Nordheim
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes