Fix crashes with MSVC 2019

Apparently the compiler bug causing MSVC to mix lambdas is not fixed in MSVC 2019

Fixes: QTBUG-82405
Change-Id: Ifafde3497ff264cda931ebfba79fcef1d5130510
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>